@@ -11,7 +11,7 @@ default.could.not.process.constructor=Default value, {0} could not be processed 
 exception.invoking.resource.method=Exception invoking Web resource method.
 illegal.initial.capacity=Illegal initial capacity: {0}.
 illegal.load.factor=Illegal load factor: {0}.
-error.processing.method=Error processing method, {0}, for WebResourceInvoker, {1}.
+error.processing.method=Error processing resource method, {0}, for ResourceMethodDispatchProvider, {1}.
 generic.type.not.supported=Generic type, {0}, not support for parameter {1}.
 not.valid.httpmethod=Method, {0}, annotated with {1} of resource, {2}, is not recognized as valid resource method.
 not.valid.dynamicresolvingmethod=Method, {0}, annotated with URI template {1} of resource, {2}, is not recognized as valid Java method annotated with @Path.
